// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `Array []`;

exports[`exclude asset exclude some 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 52.16096576891447,
              "initialDownloadTime": 52.16096576891447,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 19.53526547080592,
              "initialDownloadTime": 19.53526547080592,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 32.625700298108555,
                "ok": false,
                "percent": 167.0092497430627,
              },
              "initialDownloadTime": Object {
                "absolute": 32.625700298108555,
                "ok": true,
                "percent": 167.0092497430627,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 33 ms (167.01%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 260.1221988075658,
              "initialDownloadTime": 248.27655993009867,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 77.57889597039474,
                "ok": false,
                "percent": 42.498900131984165,
              },
              "initialDownloadTime": Object {
                "absolute": 68.42362253289471,
                "ok": true,
                "percent": 38.04420629604821,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 78 ms (42.50%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": true,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": true,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": true,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": true,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (340.30%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 652.0522268194901,
              "initialDownloadTime": 627.9594019839639,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 257.91368986430916,
              "initialDownloadTime": 255.06270559210526,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": false,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 394.13853695518094,
                "ok": true,
                "percent": 152.81799782033323,
              },
              "initialDownloadTime": Object {
                "absolute": 372.8966963918586,
                "ok": true,
                "percent": 146.19804785894212,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 21 ms (745.07%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 66.11472681949013,
              "initialDownloadTime": 66.11472681949013,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 19.53526547080592,
              "initialDownloadTime": 19.53526547080592,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": false,
                "percent": 238.4378211716341,
              },
              "initialDownloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": true,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 47 ms (238.44%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": false,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": true,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 92 ms (50.14%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 66.11472681949013,
              "initialDownloadTime": 66.11472681949013,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 19.53526547080592,
              "initialDownloadTime": 19.53526547080592,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": false,
                "percent": 238.4378211716341,
              },
              "initialDownloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": true,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 47 ms (238.44%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": false,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": true,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 92 ms (50.14%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 256.1268053556743,
              "initialDownloadTime": 256.1268053556743,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 32.364694695723685,
              "initialDownloadTime": 32.364694695723685,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 223.76211065995062,
                "ok": false,
                "percent": 691.3771712158808,
              },
              "initialDownloadTime": Object {
                "absolute": 223.76211065995062,
                "ok": true,
                "percent": 691.3771712158808,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 224 ms (691.38%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 652.0522268194901,
              "initialDownloadTime": 627.9594019839639,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 257.91368986430916,
              "initialDownloadTime": 255.06270559210526,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 394.13853695518094,
                "ok": false,
                "percent": 152.81799782033323,
              },
              "initialDownloadTime": Object {
                "absolute": 372.8966963918586,
                "ok": true,
                "percent": 146.19804785894212,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 394 ms (152.82%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 66.11472681949013,
              "initialDownloadTime": 66.11472681949013,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 19.53526547080592,
              "initialDownloadTime": 19.53526547080592,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": true,
                "percent": 238.4378211716341,
              },
              "initialDownloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": false,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 47 ms (238.44%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": true,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": false,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 82 ms (45.80%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 66.11472681949013,
              "initialDownloadTime": 66.11472681949013,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 19.53526547080592,
              "initialDownloadTime": 19.53526547080592,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": true,
                "percent": 238.4378211716341,
              },
              "initialDownloadTime": Object {
                "absolute": 46.579461348684205,
                "ok": false,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 47 ms (238.44%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 274.0759598581414,
              "initialDownloadTime": 262.2303209806743,
            },
            "before": Object {
              "asyncDownloadTime": 2.6903654399671053,
              "downloadTime": 182.54330283717104,
              "initialDownloadTime": 179.85293739720396,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 9.1552734375,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "downloadTime": Object {
                "absolute": 91.53265702097036,
                "ok": true,
                "percent": 50.142982842058935,
              },
              "initialDownloadTime": Object {
                "absolute": 82.37738358347036,
                "ok": false,
                "percent": 45.802634516633155,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 82 ms (45.80%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 256.1268053556743,
              "initialDownloadTime": 256.1268053556743,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 32.364694695723685,
              "initialDownloadTime": 32.364694695723685,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 223.76211065995062,
                "ok": true,
                "percent": 691.3771712158808,
              },
              "initialDownloadTime": Object {
                "absolute": 223.76211065995062,
                "ok": false,
                "percent": 691.3771712158808,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 224 ms (691.38%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 652.0522268194901,
              "initialDownloadTime": 627.9594019839639,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 257.91368986430916,
              "initialDownloadTime": 255.06270559210526,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 394.13853695518094,
                "ok": true,
                "percent": 152.81799782033323,
              },
              "initialDownloadTime": Object {
                "absolute": 372.8966963918586,
                "ok": false,
                "percent": 146.19804785894212,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 373 ms (146.20%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
